# FingerTestingRig

./: .gitignore  CMakeLists.txt  README.md  package.xml
finger_rig_bringup/: CMakeLists.txt  package.xml
finger_rig_bringup/launch/: finger_rig.launch.py  finger_rig.launch.xml  finger_rig_real.launch.py
finger_rig_control/: CMakeLists.txt  package.xml
finger_rig_control/src/: environment.cpp  motion_control.cpp  vision.cpp
finger_rig_description/: CMakeLists.txt  package.xml
finger_rig_description/rviz/: finger_rig.rviz
finger_rig_msgs/: CMakeLists.txt  package.xml
finger_rig_msgs/srv/: SetGripper.srv
src/: motion_control.cpp
