<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>finger_rig_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="codynichoson@gmail.com">cody</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>finger_rig_control</exec_depend>
  <exec_depend>finger_rig_description</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>

  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>

  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>moveit_commander</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
